tests/baselines/reference/functionTypesLackingReturnTypes(strict=true).errors.txt
functionTypesLackingReturnTypes.ts(2,17): error TS1005: '=>' expected.
functionTypesLackingReturnTypes.ts(6,9): error TS2304: Cannot find name 'param'.
functionTypesLackingReturnTypes.ts(9,10): error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
functionTypesLackingReturnTypes.ts(12,10): error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.


==== functionTypesLackingReturnTypes.ts (4 errors) ====
    // Error (no '=>')
    function f(x: ()) {
                    ~
!!! error TS1005: '=>' expected.
    }
    
    // Error (no '=>')
    var g: (param);
            ~~~~~
!!! error TS2304: Cannot find name 'param'.
    
    // Okay
    var h: { () }
             ~~
!!! error TS7020: Call signature, which lacks return-type annotation, implicitly has an 'any' return type.
    
    // Okay
    var i: { new () }
             ~~~~~~
!!! error TS7013: Construct signature, which lacks return-type annotation, implicitly has an 'any' return type.